--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,19 +27,19 @@
   <body>
     <div id="container">
       <header>
-        
+        Header area
       </header>
       <div id="main" role="main">
         <%= yield %>
       </div>
 
       <footer>
-
+        Footer area
       </footer>
     </div>
   
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <%= javascript_include_tag "helper"%>
+    <%= javascript_include_tag "application"%>
     <script>
       MBP.scaleFix();
     </script>
