--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
 
   <meta http-equiv="cleartype" content="on">
 
-  <%= stylesheet_link_tag "style"%>
+  <%= stylesheet_link_tag "style" %>
+  <%= stylesheet_link_tag "custom" %>
+
   <%= javascript_include_tag "modernizr-custom"%>
   <script>
     Modernizr.mq('(min-width:0)') || document.write('<script src="respond.min.js">\x3C/script>')
