--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -1,1 +1,7 @@
+<%= link_to "From", flight_search_path %>
+<br />
+<%= link_to "To", flight_search_path %>
+<br />
+<br />
 <%= link_to "Depart", flight_calendar_path %>
+<%= link_to "Return", flight_calendar_path %>
