--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,2 +1,7 @@
-<h1>Flight#search</h1>
-<p>Find me in app/views/flight/search.html.erb</p>
+
+<ul>
+  <li>airport1</li>
+  <li>airport1</li>
+  <li>airport1</li>
+  <li>airport1</li>
+</ul>
