--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,7 +1,2 @@
-
-<ul>
-  <li>airport1</li>
-  <li>airport1</li>
-  <li>airport1</li>
-  <li>airport1</li>
-</ul>
+<input type="text" name="from" id="search_from"/>
+<ul id="search_from_list"></ul>
