--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -1,7 +1,7 @@
-<%= link_to "From", flight_search_path %>
+<%= link_to "From", search_flight_index_path %>
 <br />
-<%= link_to "To", flight_search_path %>
+<%= link_to "To", search_flight_index_path %>
 <br />
 <br />
-<%= link_to "Depart", flight_calendar_path %>
-<%= link_to "Return", flight_calendar_path %>
+<%= link_to "Depart", calendar_flight_index_path %>
+<%= link_to "Return", calendar_flight_index_path %>
