--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   <meta http-equiv="cleartype" content="on">
 
   <%= stylesheet_link_tag "style" %>
+  <%= stylesheet_link_tag "jquery.ui.custom" %>
   <%= stylesheet_link_tag "custom" %>
 
   <%= javascript_include_tag "modernizr-custom"%>
