--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -16,3 +16,8 @@ only screen and (min-device-pixel-ratio: 1.5) {
 	  background-color:red;
 	}
 }
+
+/* Calendar Hacks */
+.ui-datepicker {
+  margin:0 auto;
+}
