--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(new_flight_path) do %>
+<%= form_tag(flight_index_path) do %>
   <%= search_field_tag "from", "", :id => "search_from" %>
   <%= submit_tag "Set Origin" %>
 <%- end -%>
