--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -1,3 +1,18 @@
-<div id="datepicker">
-  
+<ul>
+  <li>
+    <p>Depart</p>
+    <div id="departDetails">
+      Depart Date Here
+    </div>
+  </li>
+  <li>
+    <p>Return</p>
+    <div id="returnDetails">
+      Return Date Here
+    </div>
+  </li>
+</ul>
+<div id="datepickerD">
+</div>
+<div id="datepickerR">
 </div>
