--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
   </script>
   <%- if @origins -%>
   <script>
-    origin_airports = ['<%= @origins.join("\', \'")%>'];
+    var origin_airports = ['<%= @origins.join("\', \'")%>'];
+  <%- end -%>
+  <%- if @destination -%>
+    var destination_airports = ['<%= @destination.join("\', \'")%>'];
   </script>
   <%- end -%>
 </head>
