--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag(flight_index_path) do %>
-  <%= search_field_tag "from", "", :id => "search_from" %>
-  <%= submit_tag "Set Origin" %>
+  <%= search_field_tag params[:q], "", :id => "search_#{params[:q]}" %>
+  <%= submit_tag "Set #{(params[:q] == "from")? "Origin" : "Destination" }" %>
 <%- end -%>
-<ul id="search_from_list"></ul>
+<ul id="search_#{params[:q]}_list"></ul>
 
