--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -1,3 +1,10 @@
+<%- content_for :header do -%>
+  <div id="findFlights">
+    <div id="back"><a href="#" id="backBtn">Back</a></div>
+    <div id="midHeader"><h2>Schedules</h2></div>
+    <div id="crumb"></div>
+  </div>
+<%- end -%>
 <ul>
   <li>
     <p>Depart</p>
