--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,8 @@
-<%= link_to "Find Flights", flight_index_path%>
+<%- content_for :header do -%>
+  <div id="findFlights">
+    <!-- <div id="back"><a href="#" id="backBtn">Back</a></div> -->
+    <div id="midHeader"><h2>Demo</h2></div>
+    <!-- <div id="crumb"><h3>1 of 6</h3></div> -->
+  </div>
+<%- end -%>
+<%= link_to "Find Flights", "/flight"%>
