--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -53,6 +53,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
 }
 
+h2#findFlights {
+  background: transparent url("headFindFlights.jpg") no-repeat;
+  text-indent:-9999px;
+}
+
 /* Calendar Hacks */
 .ui-datepicker {
   margin:0 auto;
