--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -1,3 +1,11 @@
+<%- content_for :header do -%>
+  <div>
+    <div id="back"><a href="/" id="backBtn">Back</a></div>
+    <div id="midHeader"><h2 id="findFlights">Find Flights</h2></div>
+    <div id="crumb"></div>
+  </div>
+<%- end -%>
+
 <%= link_to "From", (search_flight_index_path(:q => "from")) %>
 <span id="<%= ((session[:origin].blank?)? "origin_airport" : "session_origin"  )%>"><%= session[:origin]%></span>
 <br />
