--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -58,3 +58,28 @@ only screen and (min-device-pixel-ratio: 1.5) {
   margin:0 auto;
 }
 
+/* Flight Search Area */
+.searchFieldGroup {
+  display: inline-block;
+  border: solid 1px #ccddee;
+}
+  .searchField {
+    padding: 4px 28px 4px 6px;
+    border: 1px solid;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    color: #808080;
+    font-style: italic;
+  }
+
+  #clearSearch {
+    position: relative;
+    z-index: 9;
+    margin: 0px 20px 0px -30px;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-color: #808080;
+    cursor: pointer;
+  }
