--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -1,5 +1,9 @@
 <%= form_tag(flight_index_path, :method => :post) do %>
-  <%= search_field_tag params[:q], "", :id => "search_#{params[:q]}" %>
+  <span id="searchFieldGroup">
+    From 
+    <%= text_field_tag params[:q], "Type name or city", :id => "search_#{params[:q]}", :class => "searchField" %>
+    <span id="clearSearch">X</span>
+  </span>
   <%= submit_tag "Set #{(params[:q] == "from")? "Origin" : "Destination" }" %>
 <%- end -%>
 <ul id="search_#{params[:q]}_list"></ul>
