--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
         <%= yield %>
       </div>
 
-      <!-- <footer> -->
-        <!-- <nav>
+      <!-- <footer>
+        <nav>
           <ul>
             <li class="withGap"><a href="#">Regular Site</a></li>
             <li class="withGap"><a href="#">Privacy &amp; Security</a></li>
@@ -50,7 +50,7 @@
             &copy; 2011 Jetstar Airways Pty Ltd. ABN 33 069 720 243
         </div>
       </footer> -->
-    <!-- </div> -->
+    </div>
   
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <%= javascript_include_tag "application"%>
