--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -9,7 +9,7 @@
 <div id="drWrap">
   <ul id="dr" class="reset">
     <li>
-      <div class="tapable">
+      <div class="tapable schedtaps" id="dd">
         <h4>Depart</h4>
         <div id="departDetails">
           Depart Date Here
@@ -17,12 +17,20 @@
       </div>
     </li>
     <li>
-      <h4>Return</h4>
-      <div id="returnDetails">
-        Return Date Here
+      <div class="schedtaps" id="rd">
+        <h4>Return</h4>
+        <div id="returnDetails">
+          Return Date Here
+        </div>
       </div>
     </li>
   </ul>
+</div>
+<div class="left">
+  <div id="datepickerD">
+  </div>
+  <div id="datepickerR" class="hidden">
+  </div>
 </div>
 
 
