--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -26,7 +26,7 @@
     </li>
   </ul>
 </div>
-<div class="left">
+<div class="left fullwidth">
   <div id="datepickerD">
   </div>
   <div id="datepickerR" class="hidden">
