--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -64,9 +64,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
     padding-top: 3px;
   }
   footer nav ul {
-    width: 480px;
+    /*width: 480px;*/
+    width: 335px;
     display: inline-block;
     height: 36px;
+    padding-top:5px;
   }
   footer nav ul li {
     text-align: center;
@@ -75,7 +77,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     display: block;
   }
   footer nav ul li a, footer nav ul li a:visited {
-    padding: 12px 10px;
+    padding: 12px 8px;
     height: 12px;
     background-color: #383838;
     color: white;
