--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -49,5 +49,13 @@
         </ul>
       </a>
     </div>
+    <%= form_tag(flight_index_path, :method => :post) do %>
+      Adults: <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10)) %>
+      Children: <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10)) %>
+      Infants: <%= select_tag "infants", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10)) %>
+      <%= submit_tag "Find Exact Date Flights" %>
+      <%= submit_tag "Find Flexible Date Flights" %>
+    <%- end -%>
+    <ul id="search_#{params[:q]}_list"></ul>
   </div>
 </div>
