--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -1,8 +1,8 @@
 <%- content_for :header do -%>
   <div id="findFlights">
-    <div id="back"><a href="/flight" id="backBtn">Back</a></div>
+    <div id="back"><a href="/flight" class="cancelBtn">Back</a></div>
     <div id="midHeader"><h2>Schedules</h2></div>
-    <div id="crumb"></div>
+    <div id="crumb"><a href="/flight" class="doneBtn">Back</a></div>
   </div>
 <%- end -%>
 
