--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
         <%= yield %>
       </div>
 
-      <!-- <footer>
+      <footer class="left">
         <nav>
           <ul>
             <li class="withGap"><a href="#">Regular Site</a></li>
@@ -50,7 +50,7 @@
         <div id="copyright">
             &copy; 2011 Jetstar Airways Pty Ltd. ABN 33 069 720 243
         </div>
-      </footer> -->
+      </footer>
     </div>
   
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
