--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,8 @@
     <div id="midHeader"><h2>Demo</h2></div>
   </div>
 <%- end -%>
-<div id="intro">
-  <%= link_to "Find Flights", "/flight"%>
+<div id="introWrap">
+  <div id="intro">
+    <%= link_to "Find Flights", "/flight"%>
+  </div>
 </div>
