--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -6,13 +6,15 @@
   </div>
 <%- end -%>
 
+
 <div id="drWrap">
   <ul id="dr" class="reset">
     <li>
       <div class="tapable schedtaps" id="dd">
         <h4>Depart</h4>
-        <div id="departDetails">
-          Depart Date Here
+        <div id="departDetails" class="left">
+          <div id="dpDate" class="half left">October<br />2011</div>
+          <div id="dpDay" class="half left">16</div>
         </div>
       </div>
     </li>
@@ -20,17 +22,19 @@
       <div class="schedtaps" id="rd">
         <h4>Return</h4>
         <div id="returnDetails">
-          Return Date Here
+          <div id="rpDate" class="half">Select Date</div>
+          <div id="rpDay" class="half"></div>
         </div>
       </div>
     </li>
   </ul>
 </div>
-<div class="left fullwidth">
+<div id="dps" class="left fullwidth">
   <div id="datepickerD">
   </div>
   <div id="datepickerR" class="hidden">
   </div>
 </div>
+
 
 
