--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -350,7 +350,7 @@ h2#findFlights {
 
 #flightForm {
   float: left;
-  margin: 9px 0px 0px 9px;
+  margin: 6px 0px 0px 9px;
 }
 
   .searchFieldGroup {
@@ -359,16 +359,21 @@ h2#findFlights {
   }
 
     .searchField {
-      padding: 4px 28px 4px 6px;
-      border: 1px solid;
+      padding: 7px 28px 7px 6px;
+      border: 1px solid #f85720;
       border-radius: 6px;
       -webkit-border-radius: 6px;
       -moz-border-radius: 6px;
       color: #808080;
       font-style: italic;
+      -moz-box-shadow:inset 0 0 6px #0f0f0f;
+      -webkit-box-shadow:inset 0 0 6px #0f0f0f;
+      box-shadow:inset 0 0 6px #0f0f0f;
     }
 
-      
+      #search_from_list ul li {
+        background-image: none !important;
+      }
     
     #clearSearch {
       position: relative;
