--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -73,7 +73,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
   footer nav ul li {
     text-align: center;
-    width:105px;
+    width:100px;
     float:left;
     display: block;
   }
@@ -101,6 +101,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     height:34px;
     position:absolute;
     z-index:20;
+    top:5px;
     left:5px;
     line-height: 0;
     text-indent: -9999px;
@@ -326,7 +327,6 @@ h2#findFlights {
 }
 .left {float:left;}
 .ui-datepicker {
-  width:88%;
   margin:0 auto;
 }
 .hidden {display:none;}
