--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -307,6 +307,7 @@ h2#findFlights {
 }
 .schedtaps {
   padding:5px;
+  width:85%;
 }
 .tapable {
   border:2px solid #fff;
@@ -335,12 +336,13 @@ h2#findFlights {
 #datepickerD, #datepickerR {
   margin:0 auto;
 }
-.half {width:50%;}
+.halfw {width:50%;}
 #dpDate {
   
 }
 #dpDay, #rpDay {
   font-size:32px;
+  text-align:right;
   font-weight:bold;
 }
 
