--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -10,20 +10,20 @@
 <div id="drWrap">
   <ul id="dr" class="reset">
     <li>
-      <div class="tapable schedtaps" id="dd">
+      <div class="tapable schedtaps left" id="dd">
         <h4>Depart</h4>
         <div id="departDetails" class="left">
-          <div id="dpDate" class="half left">October<br />2011</div>
-          <div id="dpDay" class="half left">16</div>
+          <div id="dpDate" class="halfw left">Oct<br />2011</div>
+          <div id="dpDay" class="halfw left">16</div>
         </div>
       </div>
     </li>
     <li>
-      <div class="schedtaps" id="rd">
+      <div class="schedtaps left" id="rd">
         <h4>Return</h4>
         <div id="returnDetails">
-          <div id="rpDate" class="half">Select Date</div>
-          <div id="rpDay" class="half"></div>
+          <div id="rpDate" class="halfw">Select Date</div>
+          <div id="rpDay" class="halfw"></div>
         </div>
       </div>
     </li>
