--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -6,9 +6,6 @@
   </div>
 <%- end -%>
 
-<%= link_to "Depart", calendar_flight_index_path %>
-<%= link_to "Return", calendar_flight_index_path %>
-
 <div id="findFlightsSec">
   <ul id="flightNav">
     <li><a href="#">One Way</a></li>
@@ -49,6 +46,7 @@
         </ul>
       </a>
     </div>
+    <div class="float">
     <%= form_tag(flight_index_path, :method => :post) do %>
       Adults: <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10)) %>
       Children: <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10)) %>
@@ -56,6 +54,7 @@
       <%= submit_tag "Find Exact Date Flights" %>
       <%= submit_tag "Find Flexible Date Flights" %>
     <%- end -%>
+    </div>
     <ul id="search_#{params[:q]}_list"></ul>
   </div>
 </div>
