--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -11,4 +11,6 @@
   </div>
 <%- end -%>
 
-<div id="search_<%= params[:q] %>_list"></div>
+<div id="searchWrap">
+  <div id="search_<%= params[:q] %>_list"></div>
+</div>
