--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -22,8 +22,8 @@
       <div class="schedtaps left" id="rd">
         <h4>Return</h4>
         <div id="returnDetails">
-          <div id="rpDate" class="halfw">Select Date</div>
-          <div id="rpDay" class="halfw"></div>
+          <div id="rpDate" class="halfw">Oct<br />2011</div>
+          <div id="rpDay" class="halfw">30</div>
         </div>
       </div>
     </li>
