--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -7,7 +7,7 @@
           <span id="clearSearch">X</span>
         </span>
       <%- end -%>
-    <a href="#" class="doneBtn">Done</a>
+    <a href="/flight" class="doneBtn">Done</a>
   </div>
 <%- end -%>
 
