--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -12,7 +12,8 @@
     <li>
       <div class="tapable schedtaps left" id="dd">
         <h4>Depart</h4>
-        <div id="departDetails" class="left">
+        <div class="left">
+          <div id="departDetails" class="hidden"></div>
           <div id="dpDate" class="halfw left">Oct<br />2011</div>
           <div id="dpDay" class="halfw left">16</div>
         </div>
@@ -21,9 +22,10 @@
     <li>
       <div class="schedtaps left" id="rd">
         <h4>Return</h4>
-        <div id="returnDetails">
-          <div id="rpDate" class="halfw">Select Date</div>
-          <div id="rpDay" class="halfw"></div>
+        <div>
+          <div id="returnDetails" class="hidden"></div>
+          <div id="dpDate" class="halfw">Oct<br />2011</div>
+          <div id="dpDay" class="halfw">16</div>
         </div>
       </div>
     </li>
