--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -24,8 +24,8 @@
         <h4>Return</h4>
         <div>
           <div id="returnDetails" class="hidden"></div>
-          <div id="dpDate" class="halfw">Oct<br />2011</div>
-          <div id="dpDay" class="halfw">16</div>
+          <div id="rpDate" class="halfw">Oct<br />2011</div>
+          <div id="rpDay" class="halfw">16</div>
         </div>
       </div>
     </li>
