--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -12,8 +12,8 @@
     <li>
       <div class="tapable schedtaps left" id="dd">
         <h4>Depart</h4>
-        <div id="departDetails" class="left">
-          <div id="dpDate" class="halfw left">Oct<br />2011</div>
+        <div id="departDetails" class="left fullwidth">
+          <div id="dpDate" class="halfw left">October<br />2011</div>
           <div id="dpDay" class="halfw left">16</div>
         </div>
       </div>
@@ -21,9 +21,9 @@
     <li>
       <div class="schedtaps left" id="rd">
         <h4>Return</h4>
-        <div id="returnDetails">
-          <div id="rpDate" class="halfw">Oct<br />2011</div>
-          <div id="rpDay" class="halfw">30</div>
+        <div id="returnDetails" class="left fullwidth">
+          <div id="rpDate" class="halfw left">October<br />2011</div>
+          <div id="rpDay" class="halfw left">30</div>
         </div>
       </div>
     </li>
