--- a/app/views/flight/calendar.html.erb
+++ b/app/views/flight/calendar.html.erb
@@ -11,7 +11,7 @@
   <ul id="dr" class="reset">
     <li>
       <div class="tapable schedtaps left" id="dd">
-        <h4>Depart</h4>
+        <h4>Depart <span class="icon dep"></span></h4>
         <div class="left fullwidth">
           <div id="departDetails" class="hidden"></div>
           <div id="dpDate" class="halfw left">Oct<br />2011</div>
@@ -21,7 +21,7 @@
     </li>
     <li>
       <div class="schedtaps left" id="rd">
-        <h4>Return</h4>
+        <h4>Return <span class="icon ret"></span></h4>
         <div class="left fullwidth">
           <div id="returnDetails" class="hidden"></div>
           <div id="rpDate" class="halfw left">October<br />2011</div>
