--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -88,12 +88,12 @@
         </div>
       <%- end -%>
     </div>
-    <div class="floatLeft">
-      <%- if @flights %>
-        <%- @flights.each do |flight| %>
-          <%= flight %>
-        <%- end %>
+  <div class="floatLeft">
+    <%- if session[:flight] %>
+      <%- session[:flight].each do |flight| %>
+        <%= flight %>
       <%- end %>
-    </div>
-    <ul id="search_#{params[:q]}_list"></ul>
+    <%- end -%>
+  </div>
+  <ul id="search_#{params[:q]}_list"></ul>
 
