--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -66,7 +66,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
   footer nav ul {
     display: inline-block;
-    /*height: 30px;*/
+    height: 35px;
     padding-top:5px;
   }
   footer nav ul li {
